Add TMDB API integration configuration
Introduces TmdbProperties and TmdbWebClientConfig for externalizing TMDB API configuration and WebClient setup. Updates application properties and adds Spring configuration metadata for TMDB settings. Also refactors related imports and package structure for TMDB DTOs.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Kafka
 spring.kafka.bootstrap-servers=192.168.1.137:9092
 
+# TMDB
+tmdb.base-url=https://api.themoviedb.org/3
+tmdb.token=change-me
