--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,30 @@
     "name": "tmdb.token",
     "type": "java.lang.String",
     "description": "A description for 'tmdb.token'"
+  },
+  {
+    "name": "ranking.m",
+    "type": "java.lang.String",
+    "description": "A description for 'ranking.m'"
+  },
+  {
+    "name": "ranking.topics.item-rarity-updated",
+    "type": "java.lang.String",
+    "description": "A description for 'ranking.topics.item-rarity-updated'"
+  },
+  {
+    "name": "ranking.topics.users",
+    "type": "java.lang.String",
+    "description": "A description for 'ranking.topics.users'"
+  },
+  {
+    "name": "ranking.topics.user-items",
+    "type": "java.lang.String",
+    "description": "A description for 'ranking.topics.user-items'"
+  },
+  {
+    "name": "ranking.completeness-weight.DISC_ONLY",
+    "type": "java.lang.String",
+    "description": "A description for 'ranking.completeness-weight.DISC_ONLY'"
   }
 ]}
